--- a/css/system.css
+++ b/css/system.css
@@ -40,7 +40,8 @@ h1{
 
 h2,h3{
     font-family: 'Noto Sans KR', sans-serif;
-    font-weight: 350;
+    font-weight: 400;
+    font-size: 20px;
     line-height: 30px;
     word-break: keep-all;
 }
@@ -213,7 +214,7 @@ h2,h3{
 
 .checkpoint ul .cp1 h3{
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 700;
     color:#F5601B;
 }
 
